--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
       <button type="submit">Enviar</button>
     </form>
 
-    <div id="resultado"></div>
+    <div id="resultado">
+      
+    </div>
   </section>
 
   <script src="./assets/js/main.js"></script>
